Opened 19 years ago

Closed 16 years ago

#386 closed bug (fixed)

[app_server] freeze on pngdump

Reported by: diver Owned by: leavengood
Priority: low Milestone: R1
Component: Servers/app_server Version:
Keywords: Cc: marcusoverhagen
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

app_server will freeze for 1-2 sec if i press print screen. During this i can't move my mouse or anything.

Change History (7)

comment:1 by mmlr, 19 years ago

I wouldn't classify this as a bug. It's just the time it takes to read the screen content, convert it to a png and save it to the disk. The exact same delay happens on R5.

comment:2 by axeld, 19 years ago

I plan on moving that functionality into the client, so that the app_server will no longer be stopped in the input loop. For now, this bug can stay open as a little reminder for that :)

comment:3 by diver, 18 years ago

Summary: app_server freeze on pngdump[app_server] freeze on pngdump

comment:4 by axeld, 18 years ago

Component: GeneralUser Interface/app_server
Description: modified (diff)
Platform: All
Priority: normallow

comment:5 by marcusoverhagen, 18 years ago

Cc: marcusoverhagen added

comment:6 by leavengood, 17 years ago

Owner: changed from axeld to leavengood

This should be fixed as of hrev25269. Well I at least followed Axel's suggestion and moved the print screen code into the client side in BWindow in libbe.so.

Diver please test this out.

comment:7 by jackburton, 16 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.